fix for mq 2560 alignment

--- a/web/themes/custom/myusf/sass/src/partials/_navigation.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_navigation.scss
@@ -542,9 +542,6 @@ a.login-btn {
 		margin-right:0px;
 		right:19px;
 	}
-	@include media-breakpoint-up(2560xl_desktop) {
-		margin-right: calc(((100% - 1920px)/ 2) + 40px);
-	}
 
 	@include media-breakpoint-down(landscape_phone) {
 		font-size: .7rem;
@@ -654,7 +651,6 @@ a.dashboard-button{
 	}
 
 	@include media-breakpoint-up(2560xl_desktop) {
-		margin-right: calc(((100% - 1920px) / 2) + 90px); /*margin-right: calc(((100% - 1920px) / 2) + 40px);*/
 		padding-right: 1.5625rem;
 	}
 
@@ -700,11 +696,6 @@ a.dashboard-button{
 	@include media-breakpoint-up(xl_desktop) {
 		right: 20px;
 	}
-
-	@include media-breakpoint-up(2560xl_desktop) {
-		margin-right: calc(((100% - 1920px)/ 2) + 50px); 
-	}
-
 
 	a#navbarDropdownMenuLink::after {
 		display: inline-block;
